@@ -12,6 +12,9 @@ Trunk (not yet released)
 
     AVRO-1553. Java: MapReduce never uses MapOutputValueSchema (tomwhite)
 
+    AVRO-1544. Java: Fix GenericData#validate for unions with null.
+    (Matthew Hayes via cutting)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
